test: sync test